Sat May 28 02:01:12 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/: Move the special item holding the total document
	  length and doc id high water mark from the record table to the
	  postlist table.  This means that when appending documents, the
	  insertion point will now always be at the end of the record table.
	  We need to jump around the postlist table to merge anyway.

Sat May 28 00:42:25 BST 2005  Olly Betts <olly@survex.com>

	* backends/flint/flint_metafile.cc: Change metafile magic to be
	  different from quartz, and make the metafile version a datestamp
	  which we'll change each time the format changes; check the return
	  value of close on the metafile.

Fri May 27 22:09:45 BST 2005  Olly Betts <olly@survex.com>

	* backends/Makefile.am,backends/flint/: Implement new fork+fcntl+exec
	  based locking;  Fix new GCC warnings.

Fri May 27 22:06:14 BST 2005  Olly Betts <olly@survex.com>

	* api/omquery.cc: Missed a warning fix.

Fri May 27 22:04:18 BST 2005  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h,
	  backends/quartz/quartz_postlist.cc,common/omtime.h,matcher/,
	  net/socketserver.cc,net/socketcommon.cc,net/socketclient.cc,
	  testsuite/btreecheck.h,testsuite/testsuite.cc: Fix GCC warnings
	  from new flags.

Fri May 27 20:06:52 BST 2005  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Add missing '#include <config.h>'.

Fri May 27 12:20:03 BST 2005  Olly Betts <olly@survex.com>

	* common/omdebug.h: Oops, change to static_cast reveals that we were
	  discarding const (harmlessly).

Fri May 27 12:16:03 BST 2005  Olly Betts <olly@survex.com>

	* common/omdebug.h: Replace C style cast with static_cast<>.

Fri May 27 12:07:48 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: -Wendif should be -Wendif-labels.

Wed May 25 20:41:39 BST 2005  Olly Betts <olly@survex.com>

	* configure.ac: Pass more -W flags to g++ (including -Wundef which